# ros

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  bashrc_fragment.sh  dependencies.repos  depthai-core_manual_install.sh  flake.nix  package.xml  ros_catkin_entrypoint.sh  ros_install.yaml  rviz.rviz
.github/workflows/: publish-container.yaml
config/: OAK-D-POE.yaml  OAK-D-PRO.yaml  OAK-D.yaml
config/oak-d-s2-af-poe/: rgbd.yaml
launch/: bringup.launch  bringup_collect.launch  bringup_rrc.launch  detect_charuco.launch  extract.launch  eye_in_hand.launch  planning.launch  play.launch  pointcloud.launch  process_pointcloud.launch  rgb.launch  rgbd.launch  rgbd_mapping.launch  robot_descriptions.launch  robots.launch  rtabmap.launch
launch/bringup/: rgb.launch  rgbd.launch  robots.launch
